--- a/pages/product/product.wxss
+++ b/pages/product/product.wxss
@@ -1,3 +1,4 @@
+@import "../../wxParse/wxParse.wxss";
 page{
   width: 100%;
   height: 100%;
@@ -104,13 +105,9 @@ page{
 }
 
 .productRemark{
+  margin-bottom: 44px;
   padding: 10px;
   color: #444;
-}
-
-.productRemark > view{
-  padding: 10px;
-  font-size: 12px;
 }
 
 .productStrartTime{
