--- a/pages/plan/plan.wxml
+++ b/pages/plan/plan.wxml
@@ -91,13 +91,15 @@
  <view class="course">
      <!-- 当天没有训练计划 -->
      <view class="no-data" wx:if="{{hasNoData == 1}}">
-        <view class="no-data-img-div">
-            <image src="https://www.ecartoon.com.cn/picture/Look-surprised@2x.png" class="no-data-img">
-              </image>
-        </view>
-       
-        <view class="no-data-font no-data-font-1">今天没有训练计划</view>
-        <view class="no-data-font no-data-font-2">欢迎使用 [王严健身专家系统] 为自己定制健身计划</view>
+            <view class="no-data-img-div">
+                <image src="https://www.ecartoon.com.cn/picture/Look-surprised@2x.png" class="no-data-img"></image>
+            </view>
+          
+            <view class="no-data-font no-data-font-1">今天没有训练计划</view>
+            <view class="no-data-font no-data-font-2">欢迎使用 [王严健身专家系统] 为自己定制健身计划</view>
+
+            <!-- 底部按钮 -->
+            <view class="design_private" bindtap="gotoDesign_private">定制计划</view>
      </view>
 
      <!-- 当天有计划 -->
