--- a/pages/plan/plan.wxss
+++ b/pages/plan/plan.wxss
@@ -178,3 +178,17 @@ page {
     line-height: 88rpx;
     border-radius: 0;
 }
+
+.design_private{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 88rpx;
+  line-height: 88rpx;
+  text-align: center;
+  background-color: #FF4401;
+  color: white;
+  font-size: 32rpx;
+  border-radius: 5rpx;
+}
