--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -176,12 +176,27 @@ page{
 
 .ticket{
   float: left;
+  position: relative;
   margin: 0 5px;
 }
 
 .ticket > image{
   width: 152.1px;
   height: 45px;
+}
+
+.phoneNumber{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.phoneNumber ::after{
+  border: none;
 }
 
 .oneCard-title{
