--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -82,6 +82,29 @@ page{
 .pre:last-child{
     border-bottom: 1px solid #f0f0f2;
 }
+.connectWifiDiv{
+  position: relative;
+}
+
+.getMobilephone{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+
+
+.getMobilephoneButton{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.getMobilephoneButton::after{
+  border: none;
+}
 
 .title{
     float: left;
