--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -186,7 +186,7 @@
       </view>
 
       <!-- 送人健康 -->
-      <view class="pre" bindtap='gotoMyPlan' >
+      <view class="pre" bindtap='gotoGiveHealth' >
             <!-- icon -->
             <view class='iconDiv'>
                   <image class='icon' mode="aspectfill" src='https://www.ecartoon.com.cn/miniProgram/club/img/myplan.png'></image>
