--- a/pages/qrlh/qrlh.wxss
+++ b/pages/qrlh/qrlh.wxss
@@ -1,6 +1,10 @@
+.banner{
+  height: 180px;
+}
+
 .banner > image{
   width: 100%;
-  height: 360px;
+  height: 100%;
 }
 
 .hongbao{
@@ -10,16 +14,24 @@
 
 .hongbao-left{
   float: left;
+  height: 36px;
+  padding-right: 10px;
 }
 
 .hongbao-left > image{
-  width: 66px;
-  height: 72px;
+  width: 33px;
+  height: 36px;
 }
 
 .hongbao-right{
   float: left;
-  font-size: 14px;
+  width: 85%;
+  font-size: 12px;
+  color: #444;
+}
+
+.hongbao-text-margin{
+  margin-top: 4px;
 }
 
 .no-data-image{
@@ -40,7 +52,16 @@
   font-size: 12px;
 }
 
+.oneCard-list{
+  margin-bottom: 44px;
+}
+
+.oneCard-list :last-child{
+  border: 0;
+}
+
 .oneCard-body{
+  position: relative;
   padding: 10px;
   overflow: hidden;
   border-bottom: 1px solid #F0F0F2;
@@ -80,7 +101,7 @@
 
 .onCard-price{
   margin-top: 3px;
-  color: #FF4401;
+  color: #BBB;
   font-size: 12px;
 }
 
@@ -90,4 +111,24 @@
   overflow: hidden;
   color: #BBB;
   font-size: 11px;
+}
+
+.checkbox{
+  position: absolute;
+  top: 40%;
+  right: 10px;
+  width: 20px;
+  height: 20px;
+}
+
+.share{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 44px;
+  text-align: center;
+  line-height: 44px;
+  color: #FFF;
+  background-color: #FF4401;
 }
