--- a/pages/courseList/courseList.wxss
+++ b/pages/courseList/courseList.wxss
@@ -25,7 +25,7 @@ page{
    width: 20%;
    margin: 0 auto;
    font-size: 32rpx;
-   color: red;
+   color: #ff4401;
    text-align: center;
 }
 
@@ -35,7 +35,7 @@ page{
     margin: 0 auto;
     font-size: 24rpx;
     text-align: center;
-    color: green;
+    color: #ff4401;
 }
 
 .fill{
@@ -87,6 +87,14 @@ page{
     font-size: 24rpx;
     color: #999999;
     margin-top: 10rpx;
+}
+
+.price{
+  color: #ff4401;
+}
+
+.moneyUnit{
+   font-size: 20rpx;
 }
 
 .peoples{
