修改分享功能
2018-05-24 14:00

--- a/pages/qrlh/qrlh.wxml
+++ b/pages/qrlh/qrlh.wxml
@@ -51,5 +51,7 @@
   </view>
 </view>
 <view class='share'>
-  分享给好友
+  <button class='share-button' open-type='share'>
+    分享给好友
+  </button>
 </view>
