--- a/pages/product/product.wxml
+++ b/pages/product/product.wxml
@@ -51,4 +51,9 @@
     </picker>
     <view class='goBuy' bindtap='goBuy'>购买</view>
   </view>
+  <view class='goHome' bindtap='goHome' wx:if='{{shareMember}}'>
+    <image src='{{filter.getPictureUrl("201805241551.png")}}'>
+    </image>
+    <view>前往主页</view>
+  </view>
 </view>
