--- a/pages/qrlh/qrlh.wxml
+++ b/pages/qrlh/qrlh.wxml
@@ -11,7 +11,7 @@
   </view>
   <view class='hongbao-right'>
     <view>
-      通过分享链接购卡享受9折优惠，您也能获得红包!
+      通过分享链接购卡享受9折优惠，您也能获得佣金!
     </view>
     <view class='hongbao-text-margin'>
       请选择健身卡，点击分享给好友，坐等红包吧！
