修改俱乐部小程序我的优惠券页面底部按钮文本和添加下拉刷新数据功能
2018-05-24 17:05

--- a/pages/ticket/ticket.wxml
+++ b/pages/ticket/ticket.wxml
@@ -39,6 +39,6 @@
 
  <!-- 激活优惠券按钮 -->
  <view class="activeTicket-div" bindtap="activeTicket" wx:if='{{activeTicket}}'>
-     <view class="activeTicket" >激活</view>
+     <view class="activeTicket" >激活优惠券</view>
  </view>
 </view>
