课程预约 教练信息展示修改

--- a/pages/courseDeal/courseDeal.wxml
+++ b/pages/courseDeal/courseDeal.wxml
@@ -6,10 +6,12 @@
        <view class="content">
              <!-- 教练头像、名称 -->
              <view class="pre">
+                 <view class="title coachNameTitle">教练</view>
                  <view class="coachImageDiv">
                      <image class="coachImage" src="{{filter.errorImage(course.image)}}"></image>
+                     <text class="value coachName">{{course.coachName}}</text>
                  </view>
-                 <view class="coachName">{{course.coachName}}</view>
+                 
              </view>
 
             <!-- 课程 -->
