--- a/pages/courseDeal/courseDeal.wxss
+++ b/pages/courseDeal/courseDeal.wxss
@@ -22,27 +22,29 @@ page{
     border-bottom: 2rpx solid #f0f2f2;
 }
 
+
 .coachImageDiv{
-    float: left;
-    left: 0;
-    bottom: 0;
-    width: 80rpx;
-    height: 80rpx;
-}
-
-.coachImage{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-}
-
-.coachName{
     float: right;
     right: 0;
     bottom: 0;
-    font-size: 28rpx;
+    width: 40%;
     height: 80rpx;
-    line-height: 80rpx;
+    text-align: center;
+}
+
+.coachNameTitle{
+   line-height: 90rpx;
+}
+
+.coachImage{
+    width: 80rpx;
+    height: 80rpx;
+    border-radius: 50%;
+    margin-left: 20rpx;
+}
+
+.coachName{
+    line-height: 90rpx;
 }
 
 .title{
