添加健身卡详情页面分享功能,添加挑战详情页分享功能,修改我的页面未登陆提示
2018-05-25 10:11

--- a/pages/activeDetail/activeDetail.wxml
+++ b/pages/activeDetail/activeDetail.wxml
@@ -145,4 +145,9 @@
   <view class='participateIn' bindtap='submitWeight' wx:if='{{active.result == 3}}'>
     提交成绩
   </view>
+  <view class='goHome' bindtap='goHome' wx:if='{{activeId}}'>
+    <image src='{{filter.getPictureUrl("201805241551.png")}}'>
+    </image>
+    <view>前往主页</view>
+  </view>
 </view>
