--- a/pages/activeDetail/activeDetail.wxss
+++ b/pages/activeDetail/activeDetail.wxss
@@ -106,6 +106,7 @@ page{
 
 .activeMemo-content{
   padding: 10px;
+  color: #A9A9A9;
 }
 
 .participateIn{
@@ -137,3 +138,23 @@ page{
   color: #BBB;
 }
 
+.goHome{
+  position: fixed;
+  bottom: 80px;
+  right: 0;
+  z-index: 1;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.goHome > image{
+  margin-left: 5px;
+  width: 30px;
+  height: 30px;
+}
+
+.goHome > view{
+  text-align: center;
+  font-size: 10px;
+  color: #FFF;
+}
