--- a/pages/introduce/introduce.wxml
+++ b/pages/introduce/introduce.wxml
@@ -1,3 +1,5 @@
+<!-- 引入过滤器 -->
+<wxs module='filter' src='../../utils/filters.wxs'></wxs>
 <import src="../../wxParse/wxParse.wxml"/>
 <view class='wraper'>
   <view class='workDate'>
@@ -30,4 +32,11 @@
       </view>
     </view>
   </view>
+
+  <!-- 分享页面，回到首页按钮 -->
+  <view class='goHome' bindtap='goHome' wx:if='{{source}}'>
+          <image src='{{filter.getPictureUrl("201805241551.png")}}'></image>
+          <view>前往主页</view>
+  </view>
+
 </view>
