--- a/pages/memberRanking/memberRanking.wxml
+++ b/pages/memberRanking/memberRanking.wxml
@@ -1,3 +1,6 @@
+<!-- 引入过滤器 -->
+<wxs module='filter' src='../../utils/filters.wxs'></wxs>
+<!-- 页面开始 -->
 <view class='wraper'>
   <view class='memberRanking'>
     <view class='memberRanking-title'>
@@ -36,5 +39,11 @@
         </view>
       </view>
     </view>
+  </view>
+
+  <!-- 分享页面，回到首页按钮 -->
+  <view class='goHome' bindtap='goHome' wx:if='{{source}}'>
+          <image src='{{filter.getPictureUrl("201805241551.png")}}'></image>
+          <view>前往主页</view>
   </view>
 </view>
