修改商品描述间距
2018-05-25 10:04

--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -236,8 +236,9 @@ page{
 }
 
 .oneCard-contant{
-  float: right;
-  width: 60%;
+  float: left;
+  margin-left: 10px;
+  width: 63%;
 }
 
 .onCard-info{
