修改挑战页面样式
2018-05-31 11:23

--- a/pages/active/active.wxml
+++ b/pages/active/active.wxml
@@ -13,9 +13,9 @@
       <image src='{{filter.errorImage(item.image)}}' mode='aspectFill'></image>
       <view class='active-body'>
         <view class='top'>挑战：{{item.name}}</view>
-        <view class='middle'>{{item.count}}人参加</view>
+        <view class='middle'>目标：{{filter.active_target(item.days, item.target, item.value)}}</view>
         <view class='bottom'>
-          目标：{{filter.active_target(item.days, item.target, item.value)}}
+          {{item.count}}人参加
         </view>
       </view>
     </view>
