--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -30,27 +30,25 @@
       </view>
     </view>
   </view>
-  <view class='box_ticket'>
+  <view class='box_ticket' wx:if="{{showTicket}}">
     <view class='ticket_title'> 
       优惠券
     </view>
-    <view class='ticket_name' bindtap='selectTicket'>
+    <view class='ticket_name' bindtap='selectTicket' >
       {{ticket.price}}<text wx:if="{{ticket.name != '请选择优惠券'}}" >元</text>{{ticket.name}}
       <image src="https://www.ecartoon.com.cn/picture/More@2x.png"></image>
     </view>
   </view>
-  <!--<view class='box_payType'>
-    <view class='wxPay_icon'>
-      <image src='https://www.ecartoon.com.cn/miniProgram/coach/img/wechatPay.png'></image>
+
+  <view class='box_ticket' wx:if="{{!showTicket}}">
+    <view class='dis_ticket_title'> 
+      优惠券
     </view>
-    <view class='wxPay_title'>
-      <view class='wxPay_name'>微信支付</view>
-			<view class='wxPay_content'>推荐安装微信5.0及以上版本的用户使用</view>
+    <view class='dis_ticket_name' >
+       优惠券不可用
     </view>
-    <view class='wxPay_check'>
-      <image src='https://www.ecartoon.com.cn/miniProgram/coach/img/dot1.png'></image>
-    </view>
-  </view> -->
+  </view>
+
   <view class='footer'>
     <view class='orderMoney'>
       <view class='orderMonty_text'> 
