--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -117,12 +117,6 @@ page{
   color: #545556;
 }
 
-.ticket_share{
-  font-size: 12px;
-  color:#8f8e8e;
-  margin-top: 20rpx;
-}
-
 .ticket_name{
   float: right;
   font-size: 14px;
@@ -132,6 +126,30 @@ page{
 .ticket_name > image{
   width: 12px;
   height: 12px;
+}
+
+.dis_ticket_title{
+  float: left;
+  font-size: 14px;
+  color: #999999;
+}
+
+.dis_ticket_name{
+  float: right;
+  font-size: 14px;
+  color: #999999;
+}
+
+.dis_ticket_name > image{
+  width: 12px;
+  height: 12px;
+}
+
+
+.ticket_share{
+  font-size: 12px;
+  color:#8f8e8e;
+  margin-top: 20rpx;
 }
 
 .box_payType{
