--- a/pages/priceCutdown/priceCutdown.wxss
+++ b/pages/priceCutdown/priceCutdown.wxss
@@ -1,3 +1,4 @@
+@import "../../wxParse/wxParse.wxss";
 page{
   width: 100%;
   height: 100%;
@@ -192,9 +193,6 @@ swiper-item{
   overflow: hidden;
 }
 
-.pre:last-child{
-  border: none;
-}
 
 .userImageDiv{
   width: 50rpx;
