--- a/pages/priceCutdown/priceCutdown.wxss
+++ b/pages/priceCutdown/priceCutdown.wxss
@@ -134,6 +134,7 @@ page{
 }
 
 .cutprice{
+  position: relative;
   width: 70%;
   height: 40rpx;
   margin: 0 auto;
@@ -145,7 +146,10 @@ page{
   border-radius: 5rpx; 
 }
 
-
+.findHelp{
+   font-size: 28rpx;
+   color: white;
+}
 
 .swiper-tab{
     padding: 0 20rpx;
@@ -222,11 +226,15 @@ swiper-item{
   background: #f0f2f2;
 }
 
+
 .shareButton{
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
   background-color: transparent;
-  margin-top: -14rpx;
-  color: white;
-  font-size: 28rpx;
+  width: 100%;
+  height: 100%;
 }
 
 .shareButton::after{
