--- a/pages/priceCutdown/priceCutdown.wxml
+++ b/pages/priceCutdown/priceCutdown.wxml
@@ -9,7 +9,7 @@
                 <view class='headImgDiv'>
                         <image class='headImg' mode='aspectfill' src='{{filter.errorImage(priceActive.activePoster)}}'></image>
                 </view>
-                <view class='prod' bindtap='gotoProduct' data-productid='{{priceActive.prodId}}'>
+                <view class='prod' bindtap='gotoProduct'>
                       <view class='left prodName'>{{priceActive.prodName}}</view>
                       <view class='right more'>
                               <image class='moreIcon' mode='aspectfill' src='https://www.ecartoon.com.cn/miniProgram/club/img/promore.png' ></image>
