--- a/pages/ticketDetail/ticketDetail.wxml
+++ b/pages/ticketDetail/ticketDetail.wxml
@@ -71,3 +71,8 @@
     </button>
   </view>
 </view>
+<view class='goHome' bindtap='goHome' wx:if='{{shareMember}}'>
+  <image src='{{filter.getPictureUrl("201805241551.png")}}'>
+  </image>
+  <view>前往主页</view>
+</view>
