--- a/pages/courseList/courseList.wxss
+++ b/pages/courseList/courseList.wxss
@@ -3,49 +3,58 @@ page{
     height: 100%;
 }
 
+.wapper{
+  position: relative;
+}
+
 .weekDiv{
-    height: auto;
-    padding: 20rpx 30rpx;
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    width: 90%;
+    padding: 20rpx 5%;
     border-top: 2rpx solid #f0f2f2;
     border-bottom: 2rpx solid #f0f2f2;
-    overflow: hidden;
+    z-index: 1;
+    background: white;
 }
 
 .preDate{
-    float: left;
-    width: 13%;
-    margin: 0 auto;
     font-size: 24rpx;
     text-align: center;
 }
 
 .toDay{
-   float: left;
-   width: 20%;
-   margin: 0 auto;
    font-size: 32rpx;
    color: #ff4401;
    text-align: center;
 }
 
 .chooseDate{
-    float: left;
-    width: 12%;
-    margin: 0 auto;
     font-size: 24rpx;
     text-align: center;
     color: #ff4401;
 }
 
 .fill{
+    position: fixed;
+    left: 0;
+    top: 80rpx;
     width: 100%;
     height: 20rpx;
+    padding-bottom: 4rpx;
     background-color: #EFEFF1;
+    z-index: 1;
 }
 
 .courseList{
     width: 100%;
     height: auto;
+    margin-top: 100rpx;
 }
 
 .course{
