--- a/pages/courseDeal/courseDeal.wxml
+++ b/pages/courseDeal/courseDeal.wxml
@@ -67,15 +67,12 @@
       <!-- 满员就不显示按钮了 -->
       <view wx:if="{{course.joinNum < course.total}}">
             <!-- 确定按钮 -->
-            <form report-submit='{{true}}' bindsubmit='submitAppointment'>
-                    <view class='submitDiv'>
-                           <button form-type='submit'>submit</button>
-                    </view>
-
-                    <view class="sure" wx:if="{{isFree}}" bindtap="appointment">
-                        预约
-                    </view>
+            <form class='submitDiv' report-submit='true' bindsubmit='submitAppointment'>
+                      <button class='submitButton' form-type='submit'></button>
             </form>
+            <view class="sure" wx:if="{{isFree}}">
+                        预约
+            </view>
 
             <!-- 支付按钮 -->
             <view class='sure' wx:if="{{!isFree}}" bindtap='gotoBuy'>
