--- a/pages/courseDeal/courseDeal.wxss
+++ b/pages/courseDeal/courseDeal.wxss
@@ -63,6 +63,28 @@ page{
    
 }
 
+.submitDiv{
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   height: 44px;
+   line-height: 44px;
+   z-index: 1;
+   
+}
+
+.submitButton{
+  height: 44px;
+  background: transparent;
+}
+
+.submitButton::after{
+  border: none;
+}
+
+
+
 .sure{
    position: fixed;
    left: 0;
@@ -97,8 +119,5 @@ page{
   margin-bottom: 20rpx;
 }
 
-.submitDiv{
-  background: transparent;
-}
 
 
