--- a/pages/live/live.wxss
+++ b/pages/live/live.wxss
@@ -3,12 +3,99 @@ page{
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: #F0F0F2;
 }
 
-video{
+image{
   width: 100%;
+  height: 100%;
 }
 
+/* 直播列表 */
+.live-item{
+  margin-bottom: 20rpx;
+}
+
+.live-background{
+  position: relative;
+  height: 300rpx;
+}
+
+.live-status{
+  position: absolute;
+  top: 20rpx;
+  right: 30rpx;
+  width: 100rpx;
+  height: 30rpx;
+  text-align: center;
+  line-height: 30rpx;
+  font-size: 24rpx;
+  color: #FFF;
+  border: 1px solid #FFF;
+  border-radius: 20rpx;
+}
+
+.live-info{
+  display: flex;
+  justify-content: space-between;
+  padding: 20rpx 40rpx;
+  height: 80rpx;
+  background-color: #FFF;
+}
+
+.live-user{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+
+.live-user-image{
+  width: 80rpx;
+  height: 80rpx;
+}
+
+.live-user-image > image{
+  border-radius: 50%;
+}
+
+.live-name{
+  margin-left: 20rpx;
+  font-size: 28rpx;
+}
+
+.live-audience{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+
+.live-audience-image{
+  width: 40rpx;
+  height: 40rpx;
+}
+
+.live-audience-count{
+  margin-left: 20rpx;
+  font-size: 28rpx;
+}
+
+/* 发起直播按钮 */
+.release-live{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 88rpx;
+  text-align: center;
+  line-height: 88rpx;
+  font-size: 28rpx;
+  color: #FFF;
+  background-color: #FF4401;
+}
+
+/* 返回主页按钮 */
 .goHome{
   position: fixed;
   bottom: 80px;
