课程列表、我的预约、次数挑战逻辑优化

--- a/pages/myAppointment/myAppointment.wxml
+++ b/pages/myAppointment/myAppointment.wxml
@@ -30,8 +30,8 @@
                                           <view class='title'>{{appointment.courseName}}</view>
                                           <!-- 授课教练 -->
                                           <view class='coachName value'>授课教练：{{appointment.coachName}}</view>
-                                          <!-- 预约时间 -->
-                                          <view class='dealTime value'>预约时间：{{appointment.applyDate}} {{appointment.startTime}}-{{appointment.endTime}}</view>
+                                          <!-- 课程时间 -->
+                                          <view class='dealTime value'>课程时间：{{appointment.courseDate}} {{appointment.startTime}}-{{appointment.endTime}}</view>
 
                                     </view>
 
